# fuzzy-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
src/: lib.rs  main.rs  matching.rs  parse.rs  parsing.rs  scoring.rs  search.rs
